--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
+    "@types/base-64": "^1.0.2",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
     "dotenv": "^17.2.3",
@@ -28,6 +29,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^13.1.0",
     "amqplib": "^0.10.9",
+    "base-64": "^1.0.0",
     "node-cron": "^4.2.1"
   }
 }
